# mcp-gateway

./: .gitignore  CODE_REVIEW.md  CODE_REVIEW_ACTION_ITEMS.md  README.md  pyproject.toml  verify.sh
config/: default-config.json
docs/: IMPLEMENTATION.md  QUICKSTART.md
src/mcp_gateway/: __init__.py  cli.py  config.py  gateway.py  logger.py  parser.py  scanner.py
tests/: mock_server.py  test_context7.md  test_context7_live.py  test_integration.sh  test_parser.py  test_scanner.py
